# ComfyUI-Spectrum-Qwen-Proper

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
spectrum_qwen/: __init__.py  chebyshev.py  config.py  constants.py  controller.py  forward_qwen.py  model_introspection.py  patcher.py  state.py  utils.py
tests/: test_branch_state.py  test_forward_qwen.py
