[project]
name = "comfyui-spectrum-qwen-proper"
version = "0.1.6"
description = "Spectrum-style hidden-state forecasting patcher for native ComfyUI Qwen Image-family models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Operating System :: OS Independent",
]
authors = [
  { name = "xmarre" }
]

[project.urls]
Repository = "https://github.com/xmarre/ComfyUI-Spectrum-Qwen-Proper"
Documentation = "https://github.com/xmarre/ComfyUI-Spectrum-Qwen-Proper/wiki"
"Bug Tracker" = "https://github.com/xmarre/ComfyUI-Spectrum-Qwen-Proper/issues"

[tool.comfy]
PublisherId = "xmarre"
DisplayName = "ComfyUI-Spectrum-Qwen-Proper"
Icon = ""
includes = []

[tool.setuptools]
packages = ["spectrum_qwen"]
